# fastapi-ca

./: .gitignore  README.md  alembic.ini  containers.py  database.py  database_models.py  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 2025_05_25_1540-565b7e11be03_add_user_table.py  2025_05_25_1718-cf3d57b7fa0b_user_add_memo.py  2025_05_26_1633-3c7fdea9dee7_add_user_table.py
user/application/: user_service.py
user/domain/: user.py
user/domain/repository/: user_repo.py
user/infa/db_models/: user.py
user/infa/repository/: user_repo.py
user/infra/db_models/: user.py
user/infra/repository/: user_repo.py
user/interface/controllers/: user_controller.py
utils/: crypto.py
