[tool.poetry]
name = "fastapi-ce"
version = "0.1.0"
description = ""
authors = ["gobong-bab <juns92.06@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
py-ulid = "^1.0.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
sqlalchemy = "^2.0.41"
alembic = "^1.16.1"
mysqlclient = "^2.2.7"
dependency-injector = "^4.46.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
